RESOLVED FIXED235162
Fix a few Objective-C object leaks due to early returns in `init`
https://bugs.webkit.org/show_bug.cgi?id=235162
Summary Fix a few Objective-C object leaks due to early returns in `init`
Tim Horton
Reported 2022-01-12 15:47:17 PST
Fix a few Objective-C object leaks due to early returns in `init`
Attachments
Patch (5.47 KB, patch)
2022-01-12 15:50 PST, Tim Horton
no flags
Tim Horton
Comment 1 2022-01-12 15:50:29 PST
Tim Horton
Comment 2 2022-01-12 15:50:31 PST
Wenson Hsieh
Comment 3 2022-01-12 15:58:01 PST
Comment on attachment 449008 [details] Patch rs=me
Joseph Pecoraro
Comment 4 2022-01-12 16:23:13 PST
Comment on attachment 449008 [details] Patch Yay! Thanks!
Tim Horton
Comment 5 2022-01-13 12:19:32 PST
Comment on attachment 449008 [details] Patch Debug EWS is hosed for unrelated reasons.
EWS
Comment 6 2022-01-13 12:24:01 PST
Committed r287986 (246015@main): <https://commits.webkit.org/246015@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449008 [details].
Note You need to log in before you can comment on or make changes to this bug.