Fix a few Objective-C object leaks due to early returns in `init` https://bugs.webkit.org/show_bug.cgi?id=235162 <rdar://problem/87489048>

Reviewed by Wenson Hsieh.

Source/JavaScriptCore:

* API/JSValue.mm:
(-[JSValue initWithValue:inContext:]):

Source/WebCore:

* platform/ios/WebAVPlayerController.mm:
(-[WebAVPlayerController init]):

Source/WebKit:

* UIProcess/ios/WKHoverPlatter.mm:
(-[WKHoverPlatter initWithView:delegate:]):

Source/WebKitLegacy/mac:

* Storage/WebDatabaseQuotaManager.mm:
(WebCore::if):



Canonical link: https://commits.webkit.org/246015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287986 268f45cc-cd09-0410-ab3c-d52691b4dbfc